syntax = "proto3";

package eflect;

import "jiffies.proto";
import "jrapl/jrapl.proto";

option java_multiple_files = true;
option java_package = "eflect";

// TODO(timur): this needs metadata
message EflectDataSet {
  // energy data
  repeated jrapl.RaplSample rapl = 1;

  // jiffies data
  repeated CpuSample cpu = 2;
  repeated TaskSample task = 3;
}
